--- a/Index.html
+++ b/Index.html
@@ -3,23 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  (viewport berfungsi untuk mmbuat tampilan halaman menyesuaikan dengan ukuran layar perangkat (responsive))
+
   <title>Beranda - Panduan Memasak</title>
+  (Judul halaman yang muncul di tab browser )
   <link rel="stylesheet" href="style.css" />
+  (Menghubungkan halaman dengan file CSS eksternal untuk styling)
   <script src="script.js" defer></script>
+  (Menyisipkan file JavaScript eksternal dan menjalankannya setelah halaman dimuat)
 </head>
 <body>
   <header>
     <h1>Selamat Datang di Website Kami!</h1>
+    (Judul utama halaman)
     <nav>
       <a href="index.html">Beranda</a>
       <a href="resep makanan.html">Resep Makanan</a>
       <a href="resep minuman.html">Resep Minuman</a>
       <a href="kontak.html">Kontak</a>
-      <a href="login.html">Login</a>
-
     </nav>
+    (Menu navigasi untuk berpindah antar halaman)
   </header>
 
+  (Bagian untuk menampilkan resep unggulan)
   <main>
     <section class="intro">
       <p>Website ini menyediakan berbagai resep dan tips memasak yang sangat mudah dilakukan untuk semua kalangan.</p>
@@ -55,7 +61,8 @@
   </main>
 
   <footer>
-    <p style="text-align:center; margin-top: 40px;">&copy; 2025 PanduanMemasak.id - Semua hak dilindungi</p>
+    <p style="text-align:center; margin-top: 40px;">&copy; 2025 Kelompok Website Panduan Memasak.id - Semua hak dilindungi</p>
+    (Simbol hak cipta dengan teks informasi hak milik)
   </footer>
 </body>
 </html>
