--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
       <h2>Resep Unggulan Hari Ini</h2>
 
       <div class="card">
-        <h3>Nasi Goreng Spesial</h3>
+        <h3>Nasi Goreng</h3>
         <p>Lezat, mudah dibuat, dan cocok untuk semua usia.</p>
         <a href="resep.html">Lihat Resep</a>
       </div>
