--- a/Index.html
+++ b/Index.html
@@ -35,8 +35,8 @@
       <h2>Resep Unggulan Hari Ini</h2>
 
       <div class="card">
-        <h3>Nasi Goreng</h3>
-        <p>Lezat, mudah dibuat, dan cocok untuk semua usia.</p>
+        <h3>Nasi Goreng (High Protein)</h3>
+        <p>Lezat, mudah dibuat, dan yang paling penting tinggi protein.</p>
         <a href="resep.html">Lihat Resep</a>
       </div>
 
