--- a/Index.html
+++ b/Index.html
@@ -2,58 +2,63 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
+  <!-- Mengatur encoding karakter ke UTF-8 untuk mendukung berbagai karakter -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  (viewport berfungsi untuk mmbuat tampilan halaman menyesuaikan dengan ukuran layar perangkat (responsive))
-
+  <!-- Membuat tampilan halaman menyesuaikan dengan ukuran layar perangkat (responsive) -->
   <title>Beranda - Panduan Memasak</title>
-  (Judul halaman yang muncul di tab browser )
+    <!-- Judul halaman yang muncul di tab browser -->
   <link rel="stylesheet" href="style.css" />
-  (Menghubungkan halaman dengan file CSS eksternal untuk styling)
+    <!-- Menghubungkan halaman dengan file CSS eksternal untuk styling -->
   <script src="script.js" defer></script>
-  (Menyisipkan file JavaScript eksternal dan menjalankannya setelah halaman dimuat)
+  <!-- Menyisipkan file JavaScript eksternal dan menjalankannya setelah halaman dimuat -->
 </head>
 <body>
   <header>
+    <img src="Logo.png" alt="Logo Panduan Memasak" style="height: 100px;" />
     <h1>Selamat Datang di Website Kami!</h1>
-    (Judul utama halaman)
+  
+    <!-- Menu navigasi untuk berpindah antar halaman -->
     <nav>
       <a href="index.html">Beranda</a>
       <a href="resep makanan.html">Resep Makanan</a>
       <a href="resep minuman.html">Resep Minuman</a>
       <a href="kontak.html">Kontak</a>
     </nav>
-    (Menu navigasi untuk berpindah antar halaman)
   </header>
 
-  (Bagian untuk menampilkan resep unggulan)
   <main>
     <section class="intro">
       <p>Website ini menyediakan berbagai resep dan tips memasak yang sangat mudah dilakukan untuk semua kalangan.</p>
     </section>
 
     <section class="featured-recipes">
+      <!-- Bagian untuk menampilkan resep unggulan -->
       <h2>Resep Unggulan Hari Ini</h2>
 
       <div class="card">
         <h3>Nasi Goreng (High Protein)</h3>
+        <img src="Nasi Goreng.jpg" alt="Nasi Goreng" style="width:100%; max-width:300px;" />
         <p>Lezat, mudah dibuat, dan yang paling penting tinggi protein.</p>
         <a href="resep.html">Lihat Resep</a>
       </div>
 
       <div class="card">
         <h3>Ketoprak</h3>
+        <img src="Ketoprak.jpg" alt="Ketoprak" style="width:100%; max-width:300px;" />
         <p>Hidangan khas Betawi yang kaya rasa, cocok untuk makan siang ringan.</p>
         <a href="resep.html">Lihat Resep</a>
       </div>
 
       <div class="card">
         <h3>Pangsit Goreng Ayam <span class="tag">Versi Anak Kosan</span></h3>
+        <img src="Pangsit Goreng Ayam.jpg" alt="Pangsit Goreng Ayam" style="width:100%; max-width:300px;" />
         <p>Dengan bahan sederhana, kamu bisa bikin camilan enak dan hemat!</p>
         <a href="resep.html">Lihat Resep</a>
       </div>
 
       <div class="card">
         <h3>Donat Kentang <span class="tag">Ramah Budget</span></h3>
+        <img src="Donat Kentang.jpg" alt="Donat Kentang" style="width:100%; max-width:300px;" />
         <p>Lembut dan manis, cocok untuk sarapan atau bekal kuliah.</p>
         <a href="resep.html">Lihat Resep</a>
       </div>
@@ -62,7 +67,6 @@
 
   <footer>
     <p style="text-align:center; margin-top: 40px;">&copy; 2025 Kelompok Website Panduan Memasak.id - Semua hak dilindungi</p>
-    (Simbol hak cipta dengan teks informasi hak milik)
   </footer>
 </body>
 </html>
