--- a/Index.html
+++ b/Index.html
@@ -39,28 +39,28 @@
         <h3>Nasi Goreng (High Protein)</h3>
         <img src="Nasi Goreng.jpg" alt="Nasi Goreng" style="width:100%; max-width:300px;" />
         <p>Lezat, mudah dibuat, dan yang paling penting tinggi protein.</p>
-        <a href="resep.html">Lihat Resep</a>
+        <a href="nasi goreng.html">Lihat Resep</a>
       </div>
 
       <div class="card">
         <h3>Ketoprak</h3>
         <img src="Ketoprak.jpg" alt="Ketoprak" style="width:100%; max-width:300px;" />
         <p>Hidangan khas Betawi yang kaya rasa, cocok untuk makan siang ringan.</p>
-        <a href="resep.html">Lihat Resep</a>
+        <a href="ketoprak.html">Lihat Resep</a>
       </div>
 
       <div class="card">
         <h3>Pangsit Goreng Ayam <span class="tag">Versi Anak Kosan</span></h3>
         <img src="Pangsit Goreng Ayam.jpg" alt="Pangsit Goreng Ayam" style="width:100%; max-width:300px;" />
         <p>Dengan bahan sederhana, kamu bisa bikin camilan enak dan hemat!</p>
-        <a href="resep.html">Lihat Resep</a>
+        <a href="pangsit goreng ayam.html">Lihat Resep</a>
       </div>
 
       <div class="card">
         <h3>Donat Kentang <span class="tag">Ramah Budget</span></h3>
         <img src="Donat Kentang.jpg" alt="Donat Kentang" style="width:100%; max-width:300px;" />
         <p>Lembut dan manis, cocok untuk sarapan atau bekal kuliah.</p>
-        <a href="resep.html">Lihat Resep</a>
+        <a href="donat kentang.html">Lihat Resep</a>
       </div>
     </section>
   </main>
