resep makanan.html

--- a/resep makanan.html
+++ b/resep makanan.html
@@ -16,27 +16,27 @@
   </nav>
   <h2>Daftar Resep</h2>
   <ul>
-    <li><a href="#nasi-goreng">Nasi Goreng (High Protein)</a></li>
+    <li><a href="nasi goreng.html">Nasi Goreng (High Protein)</a></li>
      <div id="nasi-goreng">
     <img src="Nasi Goreng.jpg" alt="Nasi Goreng" width="300">
   </div>
 
-    <li><a href="#ketoprak">Ketoprak</a></li>
+    <li><a href="ketoprak.html">Ketoprak</a></li>
     <div id="ketoprak">
     <img src="Ketoprak.jpg" alt="Ketoprak" width="300">
   </div>
 
-    <li><a href="#pangsit-ayam">Pangsit Goreng Ayam</a></li>
+    <li><a href="pangsit goreng ayam.html">Pangsit Goreng Ayam</a></li>
 <div id="pangsit-ayam">
     <img src="Pangsit Goreng Ayam.jpg" alt="Pangsit Goreng Ayam" width="300">
   </div>
 
-    <li><a href="#donat-kentang">Donat Kentang</a></li>
+    <li><a href="donat kentang.html">Donat Kentang</a></li>
 <div id="donat-kentang">
     <img src="Donat Kentang.jpg" alt="Donat Kentang" width="300">
   </div>
 
-    <li><a href="#telur-kecap">Telur Kecap</a></li>
+    <li><a href="telur kecap.html">Telur Kecap</a></li>
 <div id="telur-kecap">
     <img src="Telur Kecap.jpg" alt="Telur Kecap" width="300">
   </div>
