--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
     <!-- Menghubungkan halaman dengan file CSS eksternal untuk styling -->
   <script src="script.js" defer></script>
   <!-- Menyisipkan file JavaScript eksternal dan menjalankannya setelah halaman dimuat -->
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
