--- a/resep makanan.html
+++ b/resep makanan.html
@@ -3,6 +3,8 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Membuat tampilan halaman menyesuaikan dengan ukuran layar perangkat (responsive) -->
   <title>Resep - Panduan Memasak</title>
 </head>
 <body>
