resep makanan.html

--- a/resep makanan.html
+++ b/resep makanan.html
@@ -8,7 +8,7 @@
   <title>Resep - Panduan Memasak</title>
 </head>
 <body>
-  <img src="Logo.png" alt="Logo Panduan Memasak" width="150">
+  <img src="media/gambar/Logo/Logo.png" alt="Logo Panduan Memasak" width="150">
   <h1>Kumpulan Resep</h1>
   <nav>
      <a href="index.html">Beranda</a>
@@ -20,27 +20,27 @@
   <ul>
     <li><a href="nasi goreng.html">Nasi Goreng (High Protein)</a></li>
      <div id="nasi-goreng">
-    <img src="Nasi Goreng.jpg" alt="Nasi Goreng" width="300">
+    <img src="media/gambar/Nasi goreng/Nasi Goreng.jpg" alt="Nasi Goreng" width="300">
   </div>
 
     <li><a href="ketoprak.html">Ketoprak</a></li>
     <div id="ketoprak">
-    <img src="Ketoprak.jpg" alt="Ketoprak" width="300">
+    <img src="media/gambar/Ketoprak/Ketoprak.jpg" alt="Ketoprak" width="300">
   </div>
 
     <li><a href="pangsit goreng ayam.html">Pangsit Goreng Ayam</a></li>
 <div id="pangsit-ayam">
-    <img src="Pangsit Goreng Ayam.jpg" alt="Pangsit Goreng Ayam" width="300">
+    <img src="media/gambar/Pangsit goreng ayam/Pangsit Goreng Ayam.jpg" alt="Pangsit Goreng Ayam" width="300">
   </div>
 
     <li><a href="donat kentang.html">Donat Kentang</a></li>
 <div id="donat-kentang">
-    <img src="Donat Kentang.jpg" alt="Donat Kentang" width="300">
+    <img src="media/gambar/Donut kentang/Donat Kentang.jpg" alt="Donat Kentang" width="300">
   </div>
 
     <li><a href="telur kecap.html">Telur Kecap</a></li>
 <div id="telur-kecap">
-    <img src="Telur Kecap.jpg" alt="Telur Kecap" width="300">
+    <img src="media/gambar/Telur kecap/Telur Kecap.jpg" alt="Kecap width" width="300">
   </div>
   </ul>
 </body>
