--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <img src="media/gambar/Logo/Logo.png" alt="Logo Panduan Memasak" style="height: 100px;" />
-    <h1>Selamat Datang di Website Kami!</h1>
+    <h1>Kumpulan Resep Simpel</h1>
   
     <!-- Menu navigasi untuk berpindah antar halaman -->
     <nav>
