Update es lemon tea.html

--- a/es lemon tea.html
+++ b/es lemon tea.html
@@ -71,6 +71,8 @@
   <button onclick="setTime()">Set Time</button>
   <button onclick="startTimer()">Start</button>
   <button onclick="stopTimer()">Stop</button>
+ <button onclick="resetTimer()">Reset</button>
+
 
   <div id="timerDisplay">00:00</div>
 
