--- a/es lumut.html
+++ b/es lumut.html
@@ -67,6 +67,7 @@
   <button onclick="setTime()">Set Time</button>
   <button onclick="startTimer()">Start</button>
   <button onclick="stopTimer()">Stop</button>
+  <button onclick="resetTimer()">Reset</button>
 
   <div id="timerDisplay">00:00</div>
 
