--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
 
       <div class="card">
         <h3>Donat Kentang <span class="tag">Ramah Budget</span></h3>
-        <img src="media/gambar/Donut kentang/Donat Kentang.jpg" alt="Donat Kentang" style="width:100%; max-width:300px;" />
+        <img src="media/gambar/Donat kentang/Donat Kentang.jpg" alt="Donat Kentang" style="width:100%; max-width:300px;" />
         <p>Lembut dan manis, cocok untuk sarapan atau bekal kuliah.</p>
         <a href="donat kentang.html">Lihat Resep</a>
       </div>
