resep makanan.html

--- a/resep makanan.html
+++ b/resep makanan.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Membuat tampilan halaman menyesuaikan dengan ukuran layar perangkat (responsive) -->
+     <link rel="stylesheet" href="style.css" />
+    <!-- Menghubungkan halaman dengan file CSS eksternal untuk styling -->
   <title>Resep - Panduan Memasak</title>
 </head>
 <body>
