resep minuman.html

--- a/resep minuman.html
+++ b/resep minuman.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <!-- Membuat tampilan halaman menyesuaikan dengan ukuran layar perangkat (responsive) -->
+     <link rel="stylesheet" href="style.css" />
+    <!-- Menghubungkan halaman dengan file CSS eksternal untuk styling -->
   <title>Resep Minuman - Panduan Memasak</title>
 </head>
 <body>
