--- a/resep minuman.html
+++ b/resep minuman.html
@@ -2,23 +2,45 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
+  <!-- Mengatur encoding karakter ke UTF-8 untuk mendukung berbagai karakter -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Membuat tampilan halaman menyesuaikan dengan ukuran layar perangkat (responsive) -->
-     <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />
     <!-- Menghubungkan halaman dengan file CSS eksternal untuk styling -->
-  <title>Resep Minuman - Panduan Memasak</title>
 </head>
 <body>
-  <header>
-    <img src="media/gambar/Logo/Logo.png" alt="Logo Panduan Memasak" />
-    <h1>Kumpulan Resep Minuman</h1>
-    <nav>
-      <a href="index.html">Beranda</a>
+  <header class="main-header">
+      <!-- Logo dan Navigasi ke halaman Index -->
+    <a href="index.html">
+  <img src="media/gambar/Logo/Logo.png" alt="Logo Panduan Memasak" class="Logo" />
+</a>
+<!-- Tombol menu terpisah di luar <a> -->
+<button id="menu-toggle" class="menu-toggle">☰</button>
+
+  <!-- Navigasi Desktop -->
+    <nav class="desktop-nav">
+      <a href="Index.html">Beranda</a>
       <a href="resep makanan.html">Resep Makanan</a>
       <a href="resep minuman.html">Resep Minuman</a>
-      <a href="kontak.html">Kontak</a>
+      <a href="tentang kami&kontak.html">Tentang Kami & Kontak</a>
     </nav>
+    <!-- Tombol untuk mengubah tema gelap/terang -->
+    <button id="mode-toggle">🌙</button>
   </header>
+
+   <!-- Sidebar Slider Menu -->
+  <aside id="sidebar" class="sidebar">
+    <div class="sidebar-header">
+      <span>MENU</span>
+      <button id="close-sidebar" class="close-btn">&times;</button>
+    </div>
+    <nav class="sidebar-nav">
+       <a href="Index.html">Beranda</a>
+      <a href="resep makanan.html">Resep Makanan</a>
+      <a href="resep minuman.html">Resep Minuman</a>
+      <a href="tentang kami&kontak.html">Tentang Kami & Kontak</a>
+    </nav>
+  </aside>
 
   <main>
     <section class="featured-recipes">
@@ -53,5 +75,6 @@
   <footer>
     <p>&copy; 2025 Kelompok Website Panduan Memasak.id - Semua hak dilindungi</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
