--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- Navigasi Desktop -->
     <nav class="desktop-nav">
-      <a href="Index.html">Beranda</a>
+      <a href="index.html">Beranda</a>
       <a href="resep makanan.html">Resep Makanan</a>
       <a href="resep minuman.html">Resep Minuman</a>
       <a href="tentang kami&kontak.html">Tentang Kami & Kontak</a>
