--- a/telur kecap.html
+++ b/telur kecap.html
@@ -35,7 +35,7 @@
       <button id="close-sidebar" class="close-btn">&times;</button>
     </div>
     <nav class="sidebar-nav">
-       <a href="Index.html">Beranda</a>
+       <a href="index.html">Beranda</a>
       <a href="resep makanan.html">Resep Makanan</a>
       <a href="resep minuman.html">Resep Minuman</a>
       <a href="tentang kami&kontak.html">Tentang Kami & Kontak</a>
