--- a/donat kentang.html
+++ b/donat kentang.html
@@ -43,8 +43,8 @@
   </aside>
 
    <!-- Resep: Es Lemon Tea Segar -->
-<h2 id="es-lemon-tea">🍋 Es Lemon Tea Segar</h2>
-<img src="media/gambar/Es Lemon Tea/es lemon tea.jpeg" alt="Es Lemon Tea Segar" style="width: 400px;" class="Miaw">
+<h2 id="Donat-kentang">Donat Kentang</h2>
+<img src="media/gambar/Donat kentang/Donat Kentang.jpg" alt="Donat Kentang" style="width: 400px;" class="Miaw">
 
 <h3>Bahan-bahan:</h3>
 <ul>
