--- a/donat kentang.html
+++ b/donat kentang.html
@@ -42,7 +42,7 @@
     </nav>
   </aside>
 
-   <!-- Resep: Es Lemon Tea Segar -->
+   <!-- Resep: Donat Kentang -->
 <h2 id="Donat-kentang">Donat Kentang</h2>
 <img src="media/gambar/Donat kentang/Donat Kentang.jpg" alt="Donat Kentang" style="width: 400px;" class="Miaw">
 
